Fixes pop drawing bug caused by extra padding
Extra padding on the tags heading was causing the popup
to sometimes draw off-center and partially obscured

--- a/popup.css
+++ b/popup.css
@@ -163,7 +163,7 @@ ul.breadcrumbs{
 	background-image: url("images/breadcrumbs_splitter.png");
 	background-position: -12px center;
 	background-repeat: no-repeat;
-	padding-left: 16px;
+	padding-left: 0px;
 	width: 100%;
 }
 ul.breadcrumbs:empty{
